fix(wanderlog): make close button on item warning badges visible

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -1332,6 +1332,11 @@
       .BlockWithIcon {
         background-color: @surface0;
       }
+
+      .Badge__warning .Badge__closeButton {
+        // For example, the close button on "Temporarily closed" item
+        filter: @base-filter;
+      }
     }
     .ListViewItem {
       &__placeName {
